[metadata]
name = ccsdoc
version = 0.0.6
author = Alexandre Boucaud
author_email = aboucaud@apc.in2p3.fr
license = BSD
description = Parser tools for generating CCS Java documentation

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires =
    setuptools_scm
install_requires = 
	click
	pandas

[options.entry_points]
console_scripts = 
	ccsdoc = ccsdoc.scripts.cli:cli

[aliases]
test = pytest

[tool:pytest]
addopts = --cov=ccsdoc --cov-report=html --cov-config=.coveragerc
