[metadata]
name = ccsdoc
version = 0.0.8
author = Alexandre Boucaud
author_email = aboucaud@apc.in2p3.fr
license = BSD
description = Parser tools for generating CCS Java documentation

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires =
    setuptools_scm
install_requires = 
	click
	pandas

[options.entry_points]
console_scripts = 
	ccsdoc = ccsdoc.scripts.cli:cli

[aliases]
test = pytest

[tool:pytest]
addopts = --cov=ccsdoc --cov-report=html --cov-config=.coveragerc

[flake8]
max-complexity = 10
ignore =
    E203,  # space before : (needed for how black formats slicing)
    W503,  # line break before binary operator
    W504,  # line break after binary operator
    E402,  # module level import not at top of file
    E731,  # do not assign a lambda expression, use a def
exclude =
    ccsdoc/tests/
    .eggs/
